--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solid-custom-navigation",
   "version": "0.1.0",
-  "description": "Custom navigations for Solid written in Typescript. Implement custom page transition logic and add ✨ animations ✨",
+  "description": "Custom navigations for Solid written in Typescript. Implement custom page transition logic and ✨ animations ✨",
   "main": "dist/index/index.common.js",
   "module": "dist/index/index.module.js",
   "types": "dist/index/index.d.ts",
